some more changes

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <script src="apiController.js"></script>
 <script src="homeController.js"></script>
 <script src="project.js"></script>
+<script src="service.js"></script>
 </body>
 </html>
