--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<ul>
 		<li><a href="#/input">Enter a Palindrome</a></li>
 		<li><a href="#/output">Palindrome Results</a></li>
-		<li><a href="#/api">Yoda Speak</a></li>
+		<li><a href="#/api">Random Quote Generator</a></li>
 		<li><a href="#/landing">Home</a></li>
 	</ul>
 	<div ng-view=""></div>
@@ -21,5 +21,6 @@
 <script src="homeController.js"></script>
 <script src="project.js"></script>
 <script src="service.js"></script>
+<script src="apiService.js"></script>
 </body>
 </html>
