--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Lily and Leah's App</title>
 </head>
-<body ng-app="ourApp">
+<body ng-app="routerApp">
 	<ul>
 		<li><a href="#/input">Enter a Palindrome</a></li>
 		<li><a href="#/output">Palindrome Results</a></li>
@@ -14,7 +14,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
-<script src="script.js"></script>
+<script src="app.js"></script>
 <script src="inputController.js"></script>
 <script src="outputController.js"></script>
 <script src="apiController.js"></script>
