--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="apiController.js"></script>
 <script src="service.js"></script>
 <script src="apiService.js"></script>
+<script src="apiOutputController.js"></script>
 <script src="project.js"></script>
 	<title>Lily and Leah's App</title>
 </head>
