--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="apiService.js"></script>
 <script src="apiOutputController.js"></script>
 <script src="project.js"></script>
+<link href="style.css" type="text/css" rel="stylesheet" />
 	<title>Lily and Leah's App</title>
 </head>
 <body ng-app="routerApp">
